<resources>
    <string name="app_name">RxValidationTextInputLayout</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="hint_first_name">First name</string>
    <string name="invalid_first_name">Invalid first name</string>

    <string name="hint_last_name">Last name</string>
    <string name="invalid_last_name">Invalid last name</string>

    <string name="hint_email">Email</string>
    <string name="invalid_email">Invalid email</string>

    <string name="hint_phone">Phone number</string>
    <string name="invalid_phone">Invalid phone number</string>

    <string name="hint_year">Year</string>
    <string name="invalid_year">Invalid year</string>

    <string name="til_phone_hint">Phone</string>
    <string name="et_phone_hint">**********</string>
    <string name="format_of_phone">(***)***-****</string>

    <string name="et_dob_hint">mmddyyyy</string>
    <string name="phone_number_mask">(###)###-####</string>
    <string name="dob_mask">##/##/####</string>
    <string name="formatted_dob">mm/dd/yyyy</string>

    <string name="til_dob_hint">DOB</string>
    <string name="invalid_dob">Invalid DOB</string>

    <string name="hint_password">Password</string>
    <string name="invalid_password">Invalid password</string>

    <string name="hint_confirm_password">Confirm password</string>
    <string name="invalid_confirm_password">Invalid confirm password</string>
    <string name="sign_in">Sign In</string>

    <string name="regex_name">^[a-zA-Z]{3,}$</string>
    <string name="regex_full_name">^[a-zA-Z]{3,} [a-zA-Z]{3,}$</string>
    <string name="regex_email">^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+.(?:[a-zA-Z]{2}|com|org|net|edu|gov|mil|biz|info|mobi|name|aero|asia|jobs|museum)$</string>
    <string name="regex_phone">\\(|^\\(\\d{3}\\)\\d{3}-?\\d{4}</string>
    <string name="regex_year">(19\\d\\d|200\\d|201[0-7])</string>
    <string name="regex_dob">(0[0-9]|1[012])/(0[0-9]|1[0-9]|2[0-9]|3[01])/(19\\d\\d|200\\d|201[0-7])</string>
    <string name="regex_password"><![CDATA[^(?=.*[a-z])(?=.*[$@$#!%*?&])[A-Za-z\\d$@$#!%*?&]{8,}]]></string>

</resources>
