<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.yalantis.flow.repository.auth.SignUpActivity">

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilFirstName"
            style="@style/TextInputLayout.Counter"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:help="at least 3 letters"
            app:error="@string/invalid_first_name"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
            app:regex="@string/regex_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etFirstName"
                style="@style/EditText.SingleLine"
                android:hint="@string/hint_first_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilLastName"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilFirstName"
            app:error="@string/invalid_last_name"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
            app:regex="@string/regex_name">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLastName"
                style="@style/EditText.SingleLine"
                android:hint="@string/hint_last_name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilEmail"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilLastName"
            app:error="@string/invalid_email"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
            app:regex="@string/regex_email">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/EditText.SingleLine"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilPhone"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            android:hint="@string/til_phone_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:error="@string/invalid_phone"
            app:acceptableText="@string/format_of_phone"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
            app:regex="@string/regex_phone">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/etPhone"
                style="@style/EditText.SingleLine"
                android:hint="@string/et_phone_hint"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:typeface="monospace"
                app:allowed_chars="1234567890"
                app:keep_hint="true"
                app:mask="@string/phone_number_mask" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilYear"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPhone"
            app:error="@string/invalid_year"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper"
            app:regex="@string/regex_year">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etYear"
                style="@style/EditText.SingleLine"
                android:digits="0123456789"
                android:hint="@string/hint_year"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLength="4"
                android:typeface="monospace" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilDob"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            android:hint="@string/til_dob_hint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilYear"
            app:acceptableText="@string/formatted_dob"
            app:error="@string/invalid_dob"
            app:regex="@string/regex_dob"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper">

            <br.com.sapereaude.maskedEditText.MaskedEditText
                android:id="@+id/etDob"
                style="@style/EditText.SingleLine"
                android:hint="@string/et_dob_hint"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:typeface="monospace"
                app:allowed_chars="1234567890"
                app:keep_hint="true"
                app:mask="@string/dob_mask" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilPassword"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            android:hint="@string/hint_password"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilDob"
            app:help="3 lower case, 3 symbols and 2 upper case"
            app:error="@string/invalid_password"
            app:regex="@string/regex_password"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/EditText.SingleLine"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="15" />

        </com.kucherenko.RxValidationTextInputLayout>

        <com.kucherenko.RxValidationTextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/TextInputLayout"
            android:layout_marginTop="@dimen/margin_l"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"
            app:help="Must be the same with password"
            app:error="@string/invalid_confirm_password"
            app:equalEditText="@id/etPassword"
            app:errorTextAppearance="@style/TextAppearance.AppCompat.Small.Error"
            app:helperTextAppearance="@style/TextAppearance.AppCompat.Small.Helper">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etConfirmPassword"
                style="@style/EditText.SingleLine"
                android:hint="@string/hint_confirm_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="15"
                android:nextFocusForward="@+id/btnSignOut" />

        </com.kucherenko.RxValidationTextInputLayout>

        <Button
            android:id="@+id/btnSignIn"
            style="@style/PurpleButton"
            android:layout_marginBottom="@dimen/margin_l"
            android:layout_marginTop="@dimen/margin_l"
            android:enabled="false"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/sign_in"
            android:theme="@style/PurpleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPassword" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>

